3 Ano/1 Semestre/Compiladores/Projeto/meta2/y.output
   0  $accept : Program $end

   1  Program : PACKAGE IDENTIFIER SEMICOLON Declarations

   2  Declarations : Declarations FuncDeclaration SEMICOLON
   3               | Declarations VarDeclaration SEMICOLON
   4               |

   5  VarDeclaration : VAR VarsSpec
   6                 | VAR LPAR VarsSpec SEMICOLON RPAR

   7  ID2 : IDENTIFIER

   8  VarsSpec : ID2 Type
   9           | ID2 COMMA2 Type

  10  COMMA2 : COMMA ID2 COMMA2
  11         | ID2 COMMA2 Type

  12  Type : INT
  13       | FLOAT32
  14       | BOOL
  15       | STRING

  16  FuncDeclaration : FUNC ID2 LPAR FuncParams RPAR Type FuncBody
  17                  | FUNC ID2 LPAR FuncParams RPAR FuncBody
  18                  | FUNC ID2 LPAR RPAR Type FuncBody
  19                  | FUNC ID2 LPAR RPAR FuncBody

  20  FuncParams : ID2 Type COMMAID
  21             | ID2 Type

  22  COMMAID : COMMA ID2 Type COMMAID
  23          | COMMA ID2 Type

  24  FuncBody : LBRACE VarsAndStatement RBRACE

  25  VarsAndStatement : VarsAndStatement SEMICOLON
  26                   | VarsAndStatement VarDeclaration SEMICOLON
  27                   | VarsAndStatement Statement
  28                   |

  29  Statement : ID2 ASSIGN Expr
  30            | LBRACE StatementSC RBRACE
  31            | LBRACE RBRACE
  32            | IF Expr LBRACE RBRACE
  33            | IF Expr LBRACE StatementSC RBRACE
  34            | IF Expr LBRACE RBRACE ELSE LBRACE RBRACE
  35            | IF Expr LBRACE RBRACE ELSE LBRACE StatementSC RBRACE
  36            | IF Expr LBRACE StatementSC RBRACE ELSE LBRACE StatementSC RBRACE
  37            | FOR LBRACE StatementSC RBRACE
  38            | FOR LBRACE RBRACE
  39            | FOR Expr LBRACE RBRACE
  40            | FOR Expr LBRACE StatementSC RBRACE
  41            | RETURN Expr
  42            | RETURN
  43            | ParseArgs
  44            | PRINT LPAR Expr RPAR
  45            | PRINT LPAR STRLIT RPAR
  46            | FuncInvocation
  47            | error

  48  StatementSC : StatementSC Statement SEMICOLON
  49              | Statement SEMICOLON

  50  ParseArgs : ID2 COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR
  51            | ID2 COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR

  52  FuncInvocation : ID2 LPAR error RPAR
  53                 | ID2 LPAR Expr2 RPAR
  54                 | ID2 LPAR RPAR

  55  Expr2 : COMMA Expr
  56        | Expr COMMA Expr2

  57  Expr : Expr OR Expr
  58       | Expr AND Expr
  59       | Expr GE Expr
  60       | Expr GT Expr
  61       | Expr LE Expr
  62       | Expr LT Expr
  63       | Expr NE Expr
  64       | Expr EQ Expr
  65       | Expr PLUS Expr
  66       | Expr MINUS Expr
  67       | Expr STAR Expr
  68       | Expr DIV Expr
  69       | Expr MOD Expr
  70       | NOT Expr
  71       | MINUS Expr
  72       | PLUS Expr
  73       | ID2
  74       | NATURAL
  75       | DECIMAL
  76       | FuncInvocation
  77       | LPAR Expr RPAR
  78       | LPAR error RPAR

state 0
	$accept : . Program $end  (0)

	PACKAGE  shift 1
	.  error

	Program  goto 2


state 1
	Program : PACKAGE . IDENTIFIER SEMICOLON Declarations  (1)

	IDENTIFIER  shift 3
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : PACKAGE IDENTIFIER . SEMICOLON Declarations  (1)

	SEMICOLON  shift 4
	.  error


state 4
	Program : PACKAGE IDENTIFIER SEMICOLON . Declarations  (1)
	Declarations : .  (4)

	.  reduce 4

	Declarations  goto 5


state 5
	Program : PACKAGE IDENTIFIER SEMICOLON Declarations .  (1)
	Declarations : Declarations . FuncDeclaration SEMICOLON  (2)
	Declarations : Declarations . VarDeclaration SEMICOLON  (3)

	VAR  shift 6
	FUNC  shift 7
	$end  reduce 1

	VarDeclaration  goto 8
	FuncDeclaration  goto 9


state 6
	VarDeclaration : VAR . VarsSpec  (5)
	VarDeclaration : VAR . LPAR VarsSpec SEMICOLON RPAR  (6)

	LPAR  shift 10
	IDENTIFIER  shift 11
	.  error

	VarsSpec  goto 12
	ID2  goto 13


state 7
	FuncDeclaration : FUNC . ID2 LPAR FuncParams RPAR Type FuncBody  (16)
	FuncDeclaration : FUNC . ID2 LPAR FuncParams RPAR FuncBody  (17)
	FuncDeclaration : FUNC . ID2 LPAR RPAR Type FuncBody  (18)
	FuncDeclaration : FUNC . ID2 LPAR RPAR FuncBody  (19)

	IDENTIFIER  shift 11
	.  error

	ID2  goto 14


state 8
	Declarations : Declarations VarDeclaration . SEMICOLON  (3)

	SEMICOLON  shift 15
	.  error


state 9
	Declarations : Declarations FuncDeclaration . SEMICOLON  (2)

	SEMICOLON  shift 16
	.  error


state 10
	VarDeclaration : VAR LPAR . VarsSpec SEMICOLON RPAR  (6)

	IDENTIFIER  shift 11
	.  error

	VarsSpec  goto 17
	ID2  goto 13


state 11
	ID2 : IDENTIFIER .  (7)

	.  reduce 7


state 12
	VarDeclaration : VAR VarsSpec .  (5)

	.  reduce 5


state 13
	VarsSpec : ID2 . Type  (8)
	VarsSpec : ID2 . COMMA2 Type  (9)

	COMMA  shift 18
	INT  shift 19
	FLOAT32  shift 20
	BOOL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 11
	.  error

	Type  goto 23
	ID2  goto 24
	COMMA2  goto 25


state 14
	FuncDeclaration : FUNC ID2 . LPAR FuncParams RPAR Type FuncBody  (16)
	FuncDeclaration : FUNC ID2 . LPAR FuncParams RPAR FuncBody  (17)
	FuncDeclaration : FUNC ID2 . LPAR RPAR Type FuncBody  (18)
	FuncDeclaration : FUNC ID2 . LPAR RPAR FuncBody  (19)

	LPAR  shift 26
	.  error


state 15
	Declarations : Declarations VarDeclaration SEMICOLON .  (3)

	.  reduce 3


state 16
	Declarations : Declarations FuncDeclaration SEMICOLON .  (2)

	.  reduce 2


state 17
	VarDeclaration : VAR LPAR VarsSpec . SEMICOLON RPAR  (6)

	SEMICOLON  shift 27
	.  error


state 18
	COMMA2 : COMMA . ID2 COMMA2  (10)

	IDENTIFIER  shift 11
	.  error

	ID2  goto 28


state 19
	Type : INT .  (12)

	.  reduce 12


state 20
	Type : FLOAT32 .  (13)

	.  reduce 13


state 21
	Type : BOOL .  (14)

	.  reduce 14


state 22
	Type : STRING .  (15)

	.  reduce 15


state 23
	VarsSpec : ID2 Type .  (8)

	.  reduce 8


state 24
	COMMA2 : ID2 . COMMA2 Type  (11)

	COMMA  shift 18
	IDENTIFIER  shift 11
	.  error

	ID2  goto 24
	COMMA2  goto 29


state 25
	VarsSpec : ID2 COMMA2 . Type  (9)

	INT  shift 19
	FLOAT32  shift 20
	BOOL  shift 21
	STRING  shift 22
	.  error

	Type  goto 30


state 26
	FuncDeclaration : FUNC ID2 LPAR . FuncParams RPAR Type FuncBody  (16)
	FuncDeclaration : FUNC ID2 LPAR . FuncParams RPAR FuncBody  (17)
	FuncDeclaration : FUNC ID2 LPAR . RPAR Type FuncBody  (18)
	FuncDeclaration : FUNC ID2 LPAR . RPAR FuncBody  (19)

	RPAR  shift 31
	IDENTIFIER  shift 11
	.  error

	FuncParams  goto 32
	ID2  goto 33


state 27
	VarDeclaration : VAR LPAR VarsSpec SEMICOLON . RPAR  (6)

	RPAR  shift 34
	.  error


state 28
	COMMA2 : COMMA ID2 . COMMA2  (10)

	COMMA  shift 18
	IDENTIFIER  shift 11
	.  error

	ID2  goto 24
	COMMA2  goto 35


state 29
	COMMA2 : ID2 COMMA2 . Type  (11)

	INT  shift 19
	FLOAT32  shift 20
	BOOL  shift 21
	STRING  shift 22
	.  error

	Type  goto 36


state 30
	VarsSpec : ID2 COMMA2 Type .  (9)

	.  reduce 9


state 31
	FuncDeclaration : FUNC ID2 LPAR RPAR . Type FuncBody  (18)
	FuncDeclaration : FUNC ID2 LPAR RPAR . FuncBody  (19)

	LBRACE  shift 37
	INT  shift 19
	FLOAT32  shift 20
	BOOL  shift 21
	STRING  shift 22
	.  error

	Type  goto 38
	FuncBody  goto 39


state 32
	FuncDeclaration : FUNC ID2 LPAR FuncParams . RPAR Type FuncBody  (16)
	FuncDeclaration : FUNC ID2 LPAR FuncParams . RPAR FuncBody  (17)

	RPAR  shift 40
	.  error


state 33
	FuncParams : ID2 . Type COMMAID  (20)
	FuncParams : ID2 . Type  (21)

	INT  shift 19
	FLOAT32  shift 20
	BOOL  shift 21
	STRING  shift 22
	.  error

	Type  goto 41


state 34
	VarDeclaration : VAR LPAR VarsSpec SEMICOLON RPAR .  (6)

	.  reduce 6


state 35
	COMMA2 : COMMA ID2 COMMA2 .  (10)

	.  reduce 10


state 36
	COMMA2 : ID2 COMMA2 Type .  (11)

	.  reduce 11


state 37
	FuncBody : LBRACE . VarsAndStatement RBRACE  (24)
	VarsAndStatement : .  (28)

	.  reduce 28

	VarsAndStatement  goto 42


state 38
	FuncDeclaration : FUNC ID2 LPAR RPAR Type . FuncBody  (18)

	LBRACE  shift 37
	.  error

	FuncBody  goto 43


state 39
	FuncDeclaration : FUNC ID2 LPAR RPAR FuncBody .  (19)

	.  reduce 19


state 40
	FuncDeclaration : FUNC ID2 LPAR FuncParams RPAR . Type FuncBody  (16)
	FuncDeclaration : FUNC ID2 LPAR FuncParams RPAR . FuncBody  (17)

	LBRACE  shift 37
	INT  shift 19
	FLOAT32  shift 20
	BOOL  shift 21
	STRING  shift 22
	.  error

	Type  goto 44
	FuncBody  goto 45


state 41
	FuncParams : ID2 Type . COMMAID  (20)
	FuncParams : ID2 Type .  (21)

	COMMA  shift 46
	RPAR  reduce 21

	COMMAID  goto 47


state 42
	FuncBody : LBRACE VarsAndStatement . RBRACE  (24)
	VarsAndStatement : VarsAndStatement . SEMICOLON  (25)
	VarsAndStatement : VarsAndStatement . VarDeclaration SEMICOLON  (26)
	VarsAndStatement : VarsAndStatement . Statement  (27)

	error  shift 48
	SEMICOLON  shift 49
	LBRACE  shift 50
	RBRACE  shift 51
	VAR  shift 6
	RETURN  shift 52
	IF  shift 53
	FOR  shift 54
	PRINT  shift 55
	IDENTIFIER  shift 11
	.  error

	VarDeclaration  goto 56
	FuncInvocation  goto 57
	ID2  goto 58
	ParseArgs  goto 59
	Statement  goto 60


state 43
	FuncDeclaration : FUNC ID2 LPAR RPAR Type FuncBody .  (18)

	.  reduce 18


state 44
	FuncDeclaration : FUNC ID2 LPAR FuncParams RPAR Type . FuncBody  (16)

	LBRACE  shift 37
	.  error

	FuncBody  goto 61


state 45
	FuncDeclaration : FUNC ID2 LPAR FuncParams RPAR FuncBody .  (17)

	.  reduce 17


state 46
	COMMAID : COMMA . ID2 Type COMMAID  (22)
	COMMAID : COMMA . ID2 Type  (23)

	IDENTIFIER  shift 11
	.  error

	ID2  goto 62


state 47
	FuncParams : ID2 Type COMMAID .  (20)

	.  reduce 20


state 48
	Statement : error .  (47)

	.  reduce 47


state 49
	VarsAndStatement : VarsAndStatement SEMICOLON .  (25)

	.  reduce 25


state 50
	Statement : LBRACE . StatementSC RBRACE  (30)
	Statement : LBRACE . RBRACE  (31)

	error  shift 48
	LBRACE  shift 50
	RBRACE  shift 63
	RETURN  shift 52
	IF  shift 53
	FOR  shift 54
	PRINT  shift 55
	IDENTIFIER  shift 11
	.  error

	FuncInvocation  goto 57
	ID2  goto 58
	StatementSC  goto 64
	ParseArgs  goto 59
	Statement  goto 65


state 51
	FuncBody : LBRACE VarsAndStatement RBRACE .  (24)

	.  reduce 24


52: shift/reduce conflict (shift 11, reduce 42) on IDENTIFIER
state 52
	Statement : RETURN . Expr  (41)
	Statement : RETURN .  (42)

	LPAR  shift 66
	MINUS  shift 67
	PLUS  shift 68
	NOT  shift 69
	IDENTIFIER  shift 11
	NATURAL  shift 70
	DECIMAL  shift 71
	error  reduce 42
	SEMICOLON  reduce 42
	LBRACE  reduce 42
	RBRACE  reduce 42
	VAR  reduce 42
	RETURN  reduce 42
	IF  reduce 42
	FOR  reduce 42
	PRINT  reduce 42

	FuncInvocation  goto 72
	ID2  goto 73
	Expr  goto 74


state 53
	Statement : IF . Expr LBRACE RBRACE  (32)
	Statement : IF . Expr LBRACE StatementSC RBRACE  (33)
	Statement : IF . Expr LBRACE RBRACE ELSE LBRACE RBRACE  (34)
	Statement : IF . Expr LBRACE RBRACE ELSE LBRACE StatementSC RBRACE  (35)
	Statement : IF . Expr LBRACE StatementSC RBRACE ELSE LBRACE StatementSC RBRACE  (36)

	LPAR  shift 66
	MINUS  shift 67
	PLUS  shift 68
	NOT  shift 69
	IDENTIFIER  shift 11
	NATURAL  shift 70
	DECIMAL  shift 71
	.  error

	FuncInvocation  goto 72
	ID2  goto 73
	Expr  goto 75


state 54
	Statement : FOR . LBRACE StatementSC RBRACE  (37)
	Statement : FOR . LBRACE RBRACE  (38)
	Statement : FOR . Expr LBRACE RBRACE  (39)
	Statement : FOR . Expr LBRACE StatementSC RBRACE  (40)

	LBRACE  shift 76
	LPAR  shift 66
	MINUS  shift 67
	PLUS  shift 68
	NOT  shift 69
	IDENTIFIER  shift 11
	NATURAL  shift 70
	DECIMAL  shift 71
	.  error

	FuncInvocation  goto 72
	ID2  goto 73
	Expr  goto 77


state 55
	Statement : PRINT . LPAR Expr RPAR  (44)
	Statement : PRINT . LPAR STRLIT RPAR  (45)

	LPAR  shift 78
	.  error


state 56
	VarsAndStatement : VarsAndStatement VarDeclaration . SEMICOLON  (26)

	SEMICOLON  shift 79
	.  error


state 57
	Statement : FuncInvocation .  (46)

	.  reduce 46


state 58
	Statement : ID2 . ASSIGN Expr  (29)
	ParseArgs : ID2 . COMMA BLANKID ASSIGN PARSEINT LPAR CMDARGS LSQ Expr RSQ RPAR  (50)
	ParseArgs : ID2 . COMMA BLANKID ASSIGN PARSEINT LPAR error RPAR  (51)
	FuncInvocation : ID2 . LPAR error RPAR  (52)
	FuncInvocation : ID2 . LPAR Expr2 RPAR  (53)
	FuncInvocation : ID2 . LPAR RPAR  (54)

	COMMA  shift 80
	LPAR  shift 81
	ASSIGN  shift 82
	.  error


state 59
	Statement : ParseArgs .  (43)

	.  reduce 43


state 60
	VarsAndStatement : VarsAndStatement Statement .  (27)

	.  reduce 27


state 61
	FuncDeclaration : FUNC ID2 LPAR FuncParams RPAR Type FuncBody .  (16)

	.  reduce 16


state 62
	COMMAID : COMMA ID2 . Type COMMAID  (22)
	COMMAID : COMMA ID2 . Type  (23)

	INT  shift 19
	FLOAT32  shift 20
	BOOL  shift 21
	STRING  shift 22
	.  error

	Type  goto 83


state 63
	Statement : LBRACE RBRACE .  (31)

	.  reduce 31


state 64
	Statement : LBRACE StatementSC . RBRACE  (30)
	StatementSC : StatementSC . Statement SEMICOLON  (48)

	error  shift 48
	LBRACE  shift 50
	RBRACE  shift 84
	RETURN  shift 52
	IF  shift 53
	FOR  shift 54
	PRINT  shift 55
	IDENTIFIER  shift 11
	.  error

	FuncInvocation  goto 57
	ID2  goto 58
	ParseArgs  goto 59
	Statement  goto 85


state 65
	StatementSC : Statement . SEMICOLON  (49)

	SEMICOLON  shift 86
	.  error


state 66
	Expr : LPAR . Expr RPAR  (77)
	Expr : LPAR . error RPAR  (78)

	error  shift 87
	LPAR  shift 66
	MINUS  shift 67
	PLUS  shift 68
	NOT  shift 69
	IDENTIFIER  shift 11
	NATURAL  shift 70
	DECIMAL  shift 71
	.  error

	FuncInvocation  goto 72
	ID2  goto 73
	Expr  goto 88


state 67
	Expr : MINUS . Expr  (71)

	LPAR  shift 66
	MINUS  shift 67
	PLUS  shift 68
	NOT  shift 69
	IDENTIFIER  shift 11
	NATURAL  shift 70
	DECIMAL  shift 71
	.  error

	FuncInvocation  goto 72
	ID2  goto 73
	Expr  goto 89


state 68
	Expr : PLUS . Expr  (72)

	LPAR  shift 66
	MINUS  shift 67
	PLUS  shift 68
	NOT  shift 69
	IDENTIFIER  shift 11
	NATURAL  shift 70
	DECIMAL  shift 71
	.  error

	FuncInvocation  goto 72
	ID2  goto 73
	Expr  goto 90


state 69
	Expr : NOT . Expr  (70)

	LPAR  shift 66
	MINUS  shift 67
	PLUS  shift 68
	NOT  shift 69
	IDENTIFIER  shift 11
	NATURAL  shift 70
	DECIMAL  shift 71
	.  error

	FuncInvocation  goto 72
	ID2  goto 73
	Expr  goto 91


state 70
	Expr : NATURAL .  (74)

	.  reduce 74


state 71
	Expr : DECIMAL .  (75)

	.  reduce 75


state 72
	Expr : FuncInvocation .  (76)

	.  reduce 76

